--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
               <div class="line">Of course not—what German thinker worth their salt would ever give up on the will?  (Sorry, I couldn&#x27;t resist).  But really, in the writers&#x27; room, we work closer to what you&#x27;re describing anyway.  We know we need to be consistent to a degree and that&#x27;s non-negotiable.  But we also know that there are tolerances within the system to inconsistencies, which we can exploit for entertainment.  Or, as one of my bosses puts it, we have to navigate between two extremes:  confusion for the audience on one side, and boredom on the other.</div>
             </div>
             
-<figure class="plate"><img src="images/C.png" alt="C"></figure>
+<figure class="plate"><img src="images/C2.png" alt="C"></figure>
 
             <div class="turn speaker-sh">
               <div class="who" aria-hidden="true">SH</div>
